--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-<!-- This is a comment because the github page isn't working.
-Round 2: it's not working.-->
+<!-- Now it's working! -->
 	<head>
 		<title>Hello world!</title>
 	</head>
