--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Quantum Solutions</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
   <!-- Header -->
   			<header id="header">
@@ -28,7 +28,7 @@
   			<section id="banner">
   				<div class="inner">
   					<header>
-  						<h1>Welcome to Projection</h1>
+  						<h1>Mentoring in Medicine: Quantum Solutions</h1>
   					</header>
 
   					<div class="flex ">
@@ -129,5 +129,5 @@
   			<script src="assets/js/skel.min.js"></script>
   			<script src="assets/js/util.js"></script>
   			<script src="assets/js/main.js"></script>
-      </body>
+
     </html>
