Testing line breaks

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Header -->
   			<header id="header">
   				<div class="inner">
-  					<a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a>
+  					<a href="index.html" class="logo"><strong>Lab 19:</strong> Quantum Solutions</a>
   					<nav id="nav">
   						<a href="index.html">Home</a>
   						<a href="generic.html">Generic</a>
@@ -28,7 +28,7 @@
   			<section id="banner">
   				<div class="inner">
   					<header>
-  						<h1>Mentoring in Medicine: Quantum Solutions</h1>
+  						<h1>Mentoring in Medicine </h1> <br><h1> Quantum Solutions</h1>
   					</header>
 
   					<div class="flex ">
