--- a/index.html
+++ b/index.html
@@ -1,133 +1,90 @@
 <!DOCTYPE HTML>
 <!--
-	Projection by TEMPLATED
+	Visualize by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
 	<head>
-		<title>Quantum Solutions</title>
-		<meta charset="utf-8"/>
+		<title>Visualize by TEMPLATED</title>
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css"/>
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-  <!-- Header -->
-  			<header id="header">
-  				<div class="inner">
-  					<a href="index.html" class="logo"><strong>Lab 19:</strong> Quantum Solutions</a>
-  					<nav id="nav">
-  						<a href="index.html">Home</a>
-  						<a href="generic.html">Generic</a>
-  						<a href="elements.html">Elements</a>
-  					</nav>
-  					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-  				</div>
-  			</header>
+	<body>
 
-  		<!-- Banner -->
-  			<section id="banner">
-  				<div class="inner">
-  					<header>
-  						<h1>Mentoring in Medicine </h1> <br><h1> Quantum Solutions</h1>
-  					</header>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-  					<div class="flex ">
+				<!-- Header -->
+					<header id="header">
+						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
+						and released for free under the Creative Commons License.</h1>
+						<ul class="icons">
+							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+					</header>
 
-  						<div>
-  							<span class="icon fa-car"></span>
-  							<h3>Aliquam</h3>
-  							<p>Suspendisse amet ullamco</p>
-  						</div>
+				<!-- Main -->
+					<section id="main">
 
-  						<div>
-  							<span class="icon fa-camera"></span>
-  							<h3>Elementum</h3>
-  							<p>Class aptent taciti ad litora</p>
-  						</div>
+						<!-- Thumbnails -->
+							<section class="thumbnails">
+								<div>
+									<a href="images/fulls/01.jpg">
+										<img src="images/thumbs/01.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/02.jpg">
+										<img src="images/thumbs/02.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+								</div>
+								<div>
+									<a href="images/fulls/03.jpg">
+										<img src="images/thumbs/03.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/04.jpg">
+										<img src="images/thumbs/04.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/05.jpg">
+										<img src="images/thumbs/05.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+								</div>
+								<div>
+									<a href="images/fulls/06.jpg">
+										<img src="images/thumbs/06.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/07.jpg">
+										<img src="images/thumbs/07.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+								</div>
+							</section>
 
-  						<div>
-  							<span class="icon fa-bug"></span>
-  							<h3>Ultrices</h3>
-  							<p>Nulla vitae mauris non felis</p>
-  						</div>
+					</section>
 
-  					</div>
+				<!-- Footer -->
+					<footer id="footer">
+						<p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+					</footer>
 
-  					<footer>
-  						<a href="#" class="button">Get Started</a>
-  					</footer>
-  				</div>
-  			</section>
+			</div>
 
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/main.js"></script>
 
-  		<!-- Three -->
-  			<section id="three" class="wrapper align-center">
-  				<div class="inner">
-  					<div class="flex flex-2">
-  						<article>
-  							<div class="image round">
-  								<img src="images/pic01.jpg" alt="Pic 01" />
-  							</div>
-  							<header>
-  								<h3>Lorem ipsum<br /> dolor amet nullam</h3>
-  							</header>
-  							<p>Morbi in sem quis dui placerat ornare. Pellentesquenisi<br />euismod in, pharetra a, ultricies in diam sed arcu. Cras<br />consequat  egestas augue vulputate.</p>
-  							<footer>
-  								<a href="#" class="button">Learn More</a>
-  							</footer>
-  						</article>
-  						<article>
-  							<div class="image round">
-  								<img src="images/pic02.jpg" alt="Pic 02" />
-  							</div>
-  							<header>
-  								<h3>Sed feugiat<br /> tempus adipicsing</h3>
-  							</header>
-  							<p>Pellentesque fermentum dolor. Aliquam quam lectus<br />facilisis auctor, ultrices ut, elementum vulputate, nunc<br /> blandit ellenste egestagus commodo.</p>
-  							<footer>
-  								<a href="#" class="button">Learn More</a>
-  							</footer>
-  						</article>
-  					</div>
-  				</div>
-  			</section>
-
-  		<!-- Footer -->
-  			<footer id="footer">
-  				<div class="inner">
-
-  					<h3>Get in touch</h3>
-
-  					<form action="#" method="post">
-
-  						<div class="field half first">
-  							<label for="name">Name</label>
-  							<input name="name" id="name" type="text" placeholder="Name">
-  						</div>
-  						<div class="field half">
-  							<label for="email">Email</label>
-  							<input name="email" id="email" type="email" placeholder="Email">
-  						</div>
-  						<div class="field">
-  							<label for="message">Message</label>
-  							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-  						</div>
-  						<ul class="actions">
-  							<li><input value="Send Message" class="button alt" type="submit"></li>
-  						</ul>
-  					</form>
-
-  					<div class="copyright">
-  						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
-  					</div>
-
-  				</div>
-  			</footer>
-
-  		<!-- Scripts -->
-  			<script src="assets/js/jquery.min.js"></script>
-  			<script src="assets/js/skel.min.js"></script>
-  			<script src="assets/js/util.js"></script>
-  			<script src="assets/js/main.js"></script>
-
-    </html>
+	</body>
+</html>
