--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Visualize by TEMPLATED</title>
+		<title> Quantum Solutions </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,15 +18,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
-						and released for free under the Creative Commons License.</h1>
+						<span class="avatar"><img src="images/QSlogo.png" alt="" /></span>
+						<h1> We are a group of interns formed under the research program Mentoring in Medicine.
+							<br> We are Lab 19: Quantum Solutions. </h1>
+						<h2> We turn <strong> theoretical </strong> solutions into <strong> practical </strong> solutions. </h2>
 						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/Quantum-Solutions-Labs-108255884308671" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/quantumsolutionslabs/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:mim.quantumsolutions@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
