--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hielo by TEMPLATED</title>
+		<title>Quantum Solutions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
+				<!--<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>-->
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -23,23 +23,26 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="generic.html">About Us</a></li>
+					<li><a href="elements.html">Infographics</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/slide00.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
-							<h2>Hielo</h2>
+							<p>We turn theoretical solutions into practical solutions. <a href="https://templated.co"></a></p>
+							<h2>Quantum Solutions</h2>
+							<h3>Powered by Mentoring in Medicine: Lab 19</h3>
+
 						</header>
 					</div>
 				</article>
-				<article>
+
+				<!-- <article>
 					<img src="images/slide02.jpg" alt="" />
 					<div class="inner">
 						<header>
@@ -74,7 +77,8 @@
 							<h2>Lorem adipiscing</h2>
 						</header>
 					</div>
-				</article>
+				</article> -->
+
 			</section>
 
 		<!-- One -->
