--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				</ul>
 			</nav>
 
+
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
@@ -37,7 +38,8 @@
 							<p>We turn theoretical solutions into practical solutions. <a href="https://templated.co"></a></p>
 							<h2>Quantum Solutions</h2>
 							<h3>Powered by Mentoring in Medicine: Lab 19</h3>
-
+							<br><br>
+							<a href="http://bit.ly/qsolutions19" class="button">Survey Link</a>
 						</header>
 					</div>
 				</article>
@@ -82,7 +84,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style2">
+			<!-- <section id="one" class="wrapper style2">
 				<div class="inner">
 					<div class="grid-style">
 
@@ -124,20 +126,26 @@
 
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
-			<section id="two" class="wrapper style3">
+			<!-- <section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p>Contact Us!</p> -->
+						<!-- <h2>Morbi maximus justo</h2> -->
+						<!-- <ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
 					</header>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Three -->
-			<section id="three" class="wrapper style2">
+			<!-- <section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
 						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
@@ -166,12 +174,13 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
+					<p> Contact Us! </p>
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -179,9 +188,9 @@
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
-				<div class="copyright">
+				<!-- <div class="copyright">
 					&copy; Untitled. All rights reserved.
-				</div>
+				</div> -->
 			</footer>
 
 		<!-- Scripts -->
