Add contact links

--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
 				<div class="container">
 					<p> Contact Us! </p>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/Quantum-Solutions-Labs-108255884308671" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/quantumsolutionslabs/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:mim.quantumsolutions@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<!-- <div class="copyright">
