--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<title>Quantum Solutions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="images/QSlogo.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="QSlogo.png">
+
 	</head>
 	<body>
 
