--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide00.jpg" alt="" />
+					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>We turn theoretical solutions into practical solutions. <a href="https://templated.co"></a></p>
@@ -48,24 +48,24 @@
 				</article>
 
 				<!-- <article>
-					<img src="images/slide02.jpg" alt="" />
+					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Magna etiam</h2>
+							<p>Educators: help us make a difference today.</p>
+							<h2>Take our survey here!</h2>
 						</header>
 					</div>
-				</article>
-				<article>
-					<img src="images/slide03.jpg"  alt="" />
+				</article> -->
+				<!-- <article>
+					<img src="images/slide02.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
 							<h2>Tempus dolor</h2>
 						</header>
 					</div>
-				</article>
-				<article>
+				</article> -->
+				<!-- <article>
 					<img src="images/slide04.jpg"  alt="" />
 					<div class="inner">
 						<header>
