Update button logo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<h3>Powered by Mentoring in Medicine: Lab 19</h3>
 							<p> </p>
 							<br><br>
-							<a href="http://bit.ly/qsolutions19" class="button">Survey Link</a>
+							<a href="http://bit.ly/qsolutions19" class="button">Take our survey here!</a>
 						</header>
 					</div>
 				</article>
