v raw front page but it's updated with words

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<!--<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>-->
+				<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -39,8 +39,16 @@
 						<header>
 							<p>We turn theoretical solutions into practical solutions. <a href="https://templated.co"></a></p>
 							<h2>Quantum Solutions</h2>
-							<h3>Powered by Mentoring in Medicine: Lab 19</h3>
-							<p> </p>
+							<p> </p> <br>
+							<h4>
+								As a team of interns for Mentoring in Medicine, our lab <br> is focused on looking at the impact of COVID-19 <br> on educators across America. <br><br><br>
+								To all educators: <br>
+								Have your voice heard. Help us make a difference. <br>
+								Shine light on how COVID-19 has impacted you and <br>
+								the education system by taking this short survey:
+							</h4>
+
+
 							<br><br>
 							<a href="http://bit.ly/qsolutions19" class="button">Take our survey here!</a>
 						</header>
