--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@
 					<img src="images/slide00.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<br>
+							<br><br>
 							<p>We turn theoretical solutions into practical solutions. <a href="https://templated.co"></a></p>
 							<h2>Quantum Solutions</h2>
-							<p> </p> <br>
+							<p></p>
+							<br>
+
 							<h4>
-								As a team of interns for Mentoring in Medicine, our lab <br> is focused on looking at the impact of COVID-19 <br> on educators across America. <br><br><br>
-								To all educators: <br>
-								Have your voice heard. Help us make a difference. <br>
+								As a team of interns for Mentoring in Medicine, our lab <br>
+								is focused on looking at the <strong>impact of COVID-19 <br>
+								on educators across America.</strong>
+						 <br><br><br>
+								<strong>To all educators:<br>
+								Have your voice heard. Help us make a difference.</strong> <br>
 								Shine light on how COVID-19 has impacted you and <br>
 								the education system by taking this short survey:
 							</h4>
-
 
 							<br>
 							<a href="http://bit.ly/qsolutions19" class="button">Take our survey here!</a>
