--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">About Us</a></li>
+					<li><a href="aboutus.html">About Us</a></li>
 					<li><a href="elements.html">Infographics</a></li>
 				</ul>
 			</nav>
