--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="aboutus.html">About Us</a></li>
+					<li><a href="elements.html">Infographics</a></li>
 				</ul>
 			</nav>
 
