Don't like the About Us formatting but got words up there

--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>
+				<!-- <div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div> -->
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -32,8 +32,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Eleifend vitae urna</p>
-						<h2>Generic Page Template</h2>
+						<p>Lab 19: Quantum Solutions</p>
+						<h2>About Us</h2>
 					</header>
 				</div>
 			</section>
@@ -44,14 +44,23 @@
 					<div class="box">
 						<div class="content">
 							<header class="align-center">
-								<p>maecenas sapien feugiat ex purus</p>
-								<h2>Lorem ipsum dolor</h2>
+								<p>Mentoring in Medicine and Lab 19: Quantum Solutions</p>
+								<h2>Who Are We and What Do We Do?</h2>
 							</header>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
+							<h3> <u> About Mentoring in Medicine </u> </h3>
+							<p>
+								<b> Mentoring in Medicine </b> is a <b> non-profit organization </b> that allows <b> under-privileged students to become healthcare professionals </b> through educational activities related to the medical field.
+								MIM extends opportunities to students from elementary school to graduate school, allowing <b>students of all ages</b> to <b>attain their aspirations.</b> MIM creates an assortment of age-appropriate programs which introduces students to hospital and research environments, provides parent training, coaches students on leadership and life skills, and provides them academic enrichment. Most importantly, MIM allows students the confidence to bring forward their ideas and succeed in their ambitions.
+							</p>
 
-							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
+							<h3> <u> About Lab 19: Quantum Solutions </u> </h3>
+							<p>
+							<b>Lab 19: Quantum Solutions</b> is one of the 26 primary teams formed during Mentoring in Medicine's virtual research internship.
+							Our team consists of all students from middle school to graduate school.<br>
+							Our research topic <b> looks at the impact of COVID-19 on education, in the teachers' perspective. </b>
+							We hope to draw meaningful connections between <b>remote learning and its effect on academic experience for educators.</b><br> If you are an educator, or know an educator, please share our survey! Your help means so much to us, and we truly appreciate it.
+						</p>
 
-							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
 						</div>
 					</div>
 				</div>
