--- a/aboutus.html
+++ b/aboutus.html
@@ -9,6 +9,7 @@
 		<title>About Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="images/QSlogo.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="subpage">
@@ -46,7 +47,8 @@
 							<header class="align-center">
 								<p>Mentoring in Medicine and Lab 19: Quantum Solutions</p>
 								<h2>Who Are We and What Do We Do?</h2>
-							</header>
+								<img src="images/QSlogo.png" alt="" class="center"/></span>
+							</header><br>
 							<h3> <u> About Mentoring in Medicine </u> </h3>
 							<p>
 								<b> Mentoring in Medicine </b> is a <b> non-profit organization </b> that allows <b> under-privileged students to become healthcare professionals </b> through educational activities related to the medical field.
@@ -70,14 +72,13 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/Quantum-Solutions-Labs-108255884308671" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/quantumsolutionslabs/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:mim.quantumsolutions@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; MIM Lab 19: Quantum Solutions. All rights reserved.
 				</div>
 			</footer>
 
