--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 						<li><a href="mailto:mim.quantumsolutions@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
-				<!-- <div class="copyright">
-					&copy; Untitled. All rights reserved.
-				</div> -->
+				<div class="copyright">
+					&copy; MIM Lab 19: Quantum Solutions. All rights reserved.
+				</div>
 			</footer>
 
 		<!-- Scripts -->
