Added Youtube link

--- a/aboutus.html
+++ b/aboutus.html
@@ -71,7 +71,7 @@
 							We hope to draw meaningful connections between <b>remote learning and its effect on academic experience for educators.</b>
 							<br><br> If you are an educator, or know an educator, please share our survey! Your help means so much to us, and we truly appreciate it.
 						</p>
-						
+
 
 					</div>
 				</div>
@@ -83,6 +83,7 @@
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/Quantum-Solutions-Labs-108255884308671" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/quantumsolutionslabs/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCh9wJCEFUcYNKkavBaYMIQw" class="icon fa-youtube-play"><span class="label">Email</span></a></li>
 						<li><a href="mailto:mim.quantumsolutions@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
