--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/Quantum-Solutions-Labs-108255884308671" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/quantumsolutionslabs/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCh9wJCEFUcYNKkavBaYMIQw" class="icon fa-youtube-play"><span class="label">Email</span></a></li>
 						<li><a href="mailto:mim.quantumsolutions@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
