--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<!-- <div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div> -->
+				<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -48,10 +48,7 @@
 
 								<p>Mentoring in Medicine and Lab 19: Quantum Solutions</p>
 								<h2>Who Are We and What Do We Do?</h2>
-								<!-- <center> -->
 								<span class="image left"><img src="images/mim.jpg" alt="" width=250; height=250/></span>
-								<!-- <img src="images/QSlogo.png" alt="" width=300; height=300/>
-								<img src="images/shield.png" alt=""width=300; height=300/> -->
 
 							</header><br>
 							<h3> <u> About Mentoring in Medicine </u> </h3>
