--- a/members.html
+++ b/members.html
@@ -80,6 +80,10 @@
 										<h5>Moses Ward</h5>
 										</a>
 
+										<a href=""><img src="" alt="" />
+										<h5>Ivy Zheng</h5>
+										</a>
+
 
 
 									</div>
